Fix font size on small timer

--- a/public/css/common.scss
+++ b/public/css/common.scss
@@ -787,6 +787,10 @@ body{
                                 left: 0;
                                 right: 0;
                                 padding-top: 5px;
+
+                                @include tablet-landscape-and-below{
+                                    font-size: 12px;
+                                }
                             }
 
                             #time{
